# mma

./: .gitignore  .gitmodules  CMakeLists.txt  futhark_dev-gpu-f16.txt  futhark_dev-gpu-mem-mmmf16.txt  notes.md
src/: main.cu
src/access_patterns/: latex.py  main.py
src/cuda_prototype/: CMakeLists.txt  Makefile  compile.sh  helpers.cuh  main.cu  matmul-cutlass-simple.cuh  matmul-cutlass.cuh  matmul-cutlass2.cuh  matmul-tensor-naive.cuh  matmul-tensor.cuh  matmul.cuh  swizzle-test.cu
src/cutlass_prototype/: helpers.h  main.cu  mma.cuh  notes.md
src/fut_programs/: intrablock-mmm-f16.fut  intrablock-mmm-original.fut  mmm-f16.fut  mmm-intra-direct-funcall.fut_gpu  mmm-intra-direct-funcall.fut_gpu_mem  mmm-intra-direct-funcall.fut_imp  mmm-intra-inblock-funcall-mma-edited1.fut_gpu_mem  mmm-intra-inblock-funcall-mma.fut_gpu  mmm-intra-inblock-funcall-mma.fut_gpu_mem  mmm-intra.fut_gpu  mmm-intra2.fut_gpu  mmm-intra2.fut_gpu_mem  mmm-intra8.fut_gpu  mmm-intro-original.fut_gpu
